# Local-LLM-Arena

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Chatbot.py  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  config.py  docker-compose.yml  logger.py  requirements-dev.txt  requirements.txt  run.py  start.ps1  start.sh  web_chat.py
.github/chatmodes/: honest-efficient.chatmode.md
.github/prompts/: honest-efficient.prompt.md
.github/workflows/: ci.yml
app/: __init__.py  api_routes.py  error_handlers.py  middleware.py  ollama_service.py  routes.py  web_routes.py
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py  security.py
backend/app/routers/: chat.py  judge.py  models.py
backend/app/services/: cloud.py  ollama.py
backend/tests/: test_health.py  test_judge.py  test_options.py
docs/: TECHNICAL_REPORT.md
docs/adr/: 0001-fastapi-react.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/arena/: ArenaCard.tsx  BenchmarkDialog.tsx  ComparisonView.tsx  ControlDock.tsx  HyperparamFields.tsx  JudgeBar.tsx  JudgeConfigDialog.tsx  LeaderboardDialog.tsx  Markdown.tsx  (+4 more)
frontend/src/lib/: api.ts  benchmark.test.ts  benchmark.ts  elo.test.ts  elo.ts  instance.test.ts  instance.ts  sse.test.ts  sse.ts  types.ts  useTheme.ts  utils.ts
frontend/src/store/: arena.ts
scripts/: dev.ps1
static/: app.js  styles.css
templates/: index.html
(+8 files in other folders)
